# JSONRequest

./: .gitignore  README.md  pyproject.toml  setup.py
jsonrequest/: RequestModel.py  __init__.py  jsonrequest.py  make_request.py
